Fix Version handling and Database issues
- Fix Version through property file
- Fix Junit and R66FiniteDualState
- Fix Database connection consumption
- Improve default idle and max connections
- Add option -Dwaarp.database.connection.max=nb where nb is the max connections to apply
- Correct stopTrans in monitoring interface
- Remove a timer which caused an endless loop
- Cleanup Commander threads configuration